--- a/simplon2022/charte_engagement/index.html
+++ b/simplon2022/charte_engagement/index.html
@@ -1,3 +1,44 @@
 <html>
+  <head>
+    <title>Charte</title>
+  </head>
+  <body>
+    <h1>Charte</h1>
+    <h2>Comportement en groupe</h2>
 
+      <ul><li>être disponible pour les autres</li>
+          <li>être bienveillant</li>
+          <li>S'écouter, communiquer</li>
+          <li>Partager ses ressources/connaissances/compétences</li>
+          <li>Participer, prendre l'initiative (modifié)</li>
+      </ul>
+    <h2>Implication personnel</h2>
+
+être ponctuel
+Prévenir et justifier les absences et les retards
+[14:28]
+Avoir un bon savoir être
+[14:29]
+Tenue décente mais pas de code vestimentaire
+[14:32]
+Respect de son Environnement (modifié)
+[14:33]
+Implication personnelle et venir motivé
+[14:36]
+3. Recherche d'emploi/suite de parcours 
+
+Trouver un stage 
+Concevoir et améliorer son CV 
+Avoir les bon outils pour notre recherche
+[14:37]
+Partager son réseau pro
+[14:39]
+Participer aux événements pro ( forum/ job dating etc)
+[14:44]
+4. Respect du cadre 
+
+S'excuser si on sort du cadre 
+Discuter pour trouver une solution en cas de conflit 
+Anticiper les absences/retards
+  </body>
 </html>
